crates/leptos_csr_preload/tests/ui/lazy_invalid_argument.stderr
error: supported arguments: `name = ...`, `preload`, `preload_path = "..."`, `preload_paths = ["...", ...]`
 --> tests/ui/lazy_invalid_argument.rs:3:8
  |
3 | #[lazy(route = inventory_route)]
  |        ^^^^^
